--- a/ASP.Net_QuestRoom_App/Views/_ViewImports.cshtml
+++ b/ASP.Net_QuestRoom_App/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ASP.Net_QuestRoom_App
 @using ASP.Net_QuestRoom_App.Models
 @using ASP.Net_QuestRoom_App.Models.ViewModel
+@using ASP.Net_QuestRoom_App.Models.ViewModel.Admin;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
